# aladhan_api

./: .dockerignore  CHANGELOG.md  Caddyfile  DOCKERFILE  Dockerfile  README.md  Readme.md  docker_compose.yml  prayer-player.code-workspace  pyproject.toml
backend/: .env.example  .gitignore  README.md  alembic.ini  entrypoint.sh  fbx_token.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5dda20127329_baseline_schema.py  a1b2c3d4e5f6_add_device_uid.py
backend/flask_app/static/: index.html
backend/scripts/: README.md  build_cities_db.py  gen_changelog.py
backend/src/: __init__.py  changelog.json  main.py
backend/src/adapters/: __init__.py  models.py
backend/src/calculations/: adhan_calc.py  moonsight.py
backend/src/core/: repository_factory.py  settings.py
backend/src/data/: .gitkeep  changelog.json
backend/src/domain/: __init__.py  audio_repository.py  city_repository.py  device_repository.py  models.py  settings_repository.py
backend/src/schemas/: airmedia.py  device_info.py  exceptions.py  log_config.py  player.py  prayer_times.py  soco_device.py
backend/src/services/: __init__.py  adhan_service.py  audio_service.py  bluetooth_service.py  cities_service.py  device_service.py  env_service.py  freebox_service.py  k8s_service.py  keel_service.py  local_player_service.py  settings_service.py  soco_service.py
backend/src/utils/: date_utils.py  version.py
backend/tests/integration/: test_length.py  test_references.py
backend/tests/unit/: test_calc.py  test_convert.py  test_device_service_airmedia.py  test_freebox_service.py  (+2 more)
(+124 files in other folders)
