[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adhan-api"
version = "0.1.0"
description = "Prayer times API implemented from scratch"
authors = [
  { name="Amine Bouzahar", email="mohamed.amine.bouzahar@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "pytest>=8.4.2",
    "soco>=0.30.12",
    "uvicorn[standard]>=0.37.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/adhan"]
