[project]
name = "adhan-api"
version = "0.1.0"
description = "Prayer times API implemented from scratch"
authors = [
  { name="Amine Bouzahar", email="mohamed.amine.bouzahar@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.118.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "soco>=0.30.12",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.37.0",
]
